# signal-loom

./: .gitignore  .gitleaks.toml  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
agents/: enricher.md
brand/: prompts.md
config/: entity-aliases.example.yaml  signal-loom.example.yaml  sources.example.yaml  topics.example.yaml
core/: brief.py  config.py  enrich.py  enrichment_packets.py  enrichment_spec.md  enrichment_writeback.py  fetch.py  index.py  init.py  normalize.py  pipeline.py  prompts.py  query.py  schema.json  scrape.py  telemetry.py  validate.py
docs/spikes/: codex-capabilities-research.md  codex-native-plugin.md  codex-plugin-hardening-report.md
docs/transfer/: codex-vscode-workstation.md
hooks/: codex-hooks.json  hooks.json
hooks/scripts/: bootstrap.py
scripts/: check-leaks.sh  claude_push_guard.py  codex_plugin_e2e.py  make_transfer_package.py  setup-hooks.sh
skills/brief/: SKILL.md
tests/: conftest.py  record_enrichment.py  test_bootstrap.py  test_brief.py  test_clis.py  test_codex_e2e_harness.py  test_codex_plugin.py  test_config.py  test_config_resolver.py  test_enrich.py  test_enrich_live.py  test_enrichment_packets.py  test_fetch.py  test_index.py  test_init.py  test_normalize.py  test_onboarding_hardening.py  test_pipeline.py  test_prompts.py  test_query.py  test_scrape.py  test_security.py  test_skeleton.py  test_transfer_package.py  test_validate.py  test_writeback.py
(+16 files in other folders)
