[project]
name = "signal-loom"
version = "0.3.2"
description = "A personal intelligence pipeline: declarative sources → scrape → AI-enrich → index → brief."
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
  "httpx>=0.27", "trafilatura>=1.8", "feedparser>=6.0",
  "yt-dlp>=2024.0", "youtube-transcript-api>=0.6", "python-frontmatter>=1.1", "PyYAML>=6.0",
  "anthropic>=0.40", "python-dateutil>=2.9",
]
[project.optional-dependencies]
browser = ["playwright>=1.45"]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]

[project.scripts]
signal-loom = "core.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["skeleton: end-to-end contract (also runnable in isolation via -m skeleton)"]
